dont make fixed items jump on scroll

--- a/src/components/sidebar/style.scss
+++ b/src/components/sidebar/style.scss
@@ -8,6 +8,7 @@
 }
 
 .sticky-sidebar-recently-viewed {
+    transform: translate3d(0, 0, 0);
     position: fixed;
     width: $sidebar-width;
     top: $navbar-height + $base-spacing;
