--- a/src/flows/flowComponents/contentToolbar/style.scss
+++ b/src/flows/flowComponents/contentToolbar/style.scss
@@ -40,6 +40,7 @@
 .sticky-mobile-content-toolbar {
     width: 100%;
     box-sizing: border-box;
+    transform: translate3d(0, 0, 0);
     position: fixed;
     z-index: 3;
     top: 60px;
